{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 70,
  "lineage": "01ebefd1-777a-2229-2175-a50a23e5fda7",
  "resources": [
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:internet-gateway/igw-00b51ed250aa12bdb",
            "id": "igw-00b51ed250aa12bdb",
            "owner_id": "005913962162",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "igw-us-west-1-starfleet",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "igw-us-west-1-starfleet",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "vpc_id": "vpc-0b7ee98ccf3702eec"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "main_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058e57426d433c93c",
            "original_route_table_id": "rtb-0651392f87c4cd559",
            "route_table_id": "rtb-04ac2bc26a15e8779",
            "vpc_id": "vpc-0b7ee98ccf3702eec"
          },
          "dependencies": [
            "module.vpc_network.aws_route_table.route_table",
            "module.vpc_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00b51ed250aa12bdb",
            "id": "r-rtb-04ac2bc26a15e87791080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04ac2bc26a15e8779",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_internet_gateway.igw",
            "module.vpc_network.aws_route_table.route_table",
            "module.vpc_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:route-table/rtb-04ac2bc26a15e8779",
            "id": "rtb-04ac2bc26a15e8779",
            "owner_id": "005913962162",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b51ed250aa12bdb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "Route Table",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "Route Table",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b7ee98ccf3702eec"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0383b0954c2d455d2",
            "route_table_id": "rtb-04ac2bc26a15e8779",
            "subnet_id": "subnet-00f520a851e485164"
          },
          "dependencies": [
            "module.vpc_network.aws_route_table.route_table",
            "module.vpc_network.aws_subnet.public_subnets",
            "module.vpc_network.aws_vpc.vpc",
            "module.vpc_network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062cc056fb4c7c00e",
            "route_table_id": "rtb-04ac2bc26a15e8779",
            "subnet_id": "subnet-099edca880309b00d"
          },
          "dependencies": [
            "module.vpc_network.aws_route_table.route_table",
            "module.vpc_network.aws_subnet.public_subnets",
            "module.vpc_network.aws_vpc.vpc",
            "module.vpc_network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:subnet/subnet-00f520a851e485164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.47.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f520a851e485164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005913962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1a-starfleet-public-public",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1a-starfleet-public-public",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "vpc_id": "vpc-0b7ee98ccf3702eec"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc",
            "module.vpc_network.data.aws_availability_zones.current"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:subnet/subnet-099edca880309b00d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.47.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099edca880309b00d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005913962162",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1b-starfleet-public-public",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "sn-us-west-1b-starfleet-public-public",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "vpc_id": "vpc-0b7ee98ccf3702eec"
          },
          "dependencies": [
            "module.vpc_network.aws_vpc.vpc",
            "module.vpc_network.data.aws_availability_zones.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:005913962162:vpc/vpc-0b7ee98ccf3702eec",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.47.0.0/16",
            "default_network_acl_id": "acl-0ae00d4a1594b0142",
            "default_route_table_id": "rtb-04ac2bc26a15e8779",
            "default_security_group_id": "sg-0ade2bf8b2e29baad",
            "dhcp_options_id": "dopt-416f7126",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b7ee98ccf3702eec",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04ac2bc26a15e8779",
            "owner_id": "005913962162",
            "tags": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "vpc-us-west-1-starfleet-public",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            },
            "tags_all": {
              "CostCenter": "1234567890",
              "Department": "BrAM",
              "ManagedBy": "Terraform",
              "Name": "vpc-us-west-1-starfleet-public",
              "Organization": "msg",
              "Stage": "production",
              "TrainingSession": "2023-03-24",
              "solution": "cxp"
            }
          }
        }
      ]
    }
  ]
}